# hronir

./: .env.example  .gitignore  .pre-commit-config.yaml  .prev_uuid  AGENTS.MD  AGENTS.md  BUSINESS_RULES.md  CLAUDE.md  CONTRIBUTING.md  GLOSSARY.md  LICENSE  README.md  TODO.md  audit_notes_merkle_pgp.md  cleanup_branches.sh  demo_ai_agents.py  env.sample  hronir_1a_content.md  hronir_pow_A.md  pyproject.toml  repomix.config.json  repomix_output.txt  requirements.txt  temp_h_a1.md  test_agents.py
.claude/: settings.local.json
book/: 00_tlon_uqbar.md  book_index.json
data/: canonical_path.json  encyclopedia.duckdb
docs/: court_of_the_future.md  critics.md  distributed_architecture_plan.md  ledger_based_voting_protocol.md  manual_testing.md  new_libs_plan.md  pivot_plan_v2.md  pivot_plan_v2_review_copy.md  proof_of_work_voting.md  simplification.md  uuid_structure_plan.md
forking_path/: manual.csv  position_000.csv  position_001.csv  test_forks.csv  yu-tsun.csv
hronir_encyclopedia/: __init__.py  canon.py  canon_new.py  cli.py  cli_utils.py  database.py  duckdb_storage.py  gemini_util.py  graph_logic.py  models.py  pandas_data_manager.py  prompt_builder.py  prompt_synthesizer.py  ratings.py  ratings_old.py  semantic_extractor.py  session_manager.py  sharding.py  storage.py  storage_old.py  transaction_manager.py  transaction_manager_old.py  utils.py
narrative_paths/: narrative_paths_position_0.csv  narrative_paths_position_1.csv  narrative_paths_position_2.csv
ratings/: position_001.csv  position_002.csv  votes.csv
scripts/: fix_hooks.sh  get_next_chapter_params.py  migrate_csv_to_duckdb.py  migrate_csv_to_sqlite.py  migrate_library_structure.py  migrate_sessions_to_duckdb.py  migrate_to_duckdb.py
test_temp/: borges_made_manifest.md  cli_interface_aesthetics.md  code_archaeology_final.md  database_philosophy.md  elo_game_theory_meditation.md  genesis_codigo.md  insights_sistema.md  protocol_evolution_witnessed.md  protocolo_borgiano.md  temporal_cascade_philosophy.md  testing_recursion_paradox.md  uuid_determinism_poetry.md
tests/: OLD_test_storage_and_votes.py  conftest.py  test_canon_new.py  test_canonical_dynamics.py  test_cli_consolidate.py  test_duel_curation.py  test_e2e.py  test_e2e_full_workflow.py  test_graph_logic.py  test_migration.py  test_path_qualification.py  test_protocol_v2.py  test_ranking_filtering.py  test_ratings_ranking.py  test_session_lifecycle.py  test_sessions.py  test_sessions_and_cascade.py  test_storage_and_votes.py  test_storage_functions.py  test_system_dynamics.py  test_temporal_cascade.py  test_transactions.py
the_garden/: forking_paths.csv  test_forks.csv
the_library/: 0065320f-4e9e-52a2-bf2a-19da72b7c373.md  00770b66-1d10-56e1-9aa9-35c5aaa533b2.md  0429bf93-c699-5dea-9230-001765ad0321.md  074dee83-b55e-5259-8e49-cdb534c967a1.md  07ed42e3-a863-5f53-ae7d-43e4b5e750ee.md  081162a9-0b48-5fba-abd1-f1522b6f2d34.md  089372aa-c9a8-5932-a2ec-450118300d2e.md  09718260-6052-503f-9845-ef6d17acfec8.md  (+173 more)
(+61 files in other folders)
