[project]
name = "hronir-encyclopedia"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "google-generativeai",
    "sqlalchemy>=2.0",
    "python-dotenv", # Adicionado para gerenciar secrets
    "numpy", # Adicionado para um CLI moderno
    "blake3", # Adicionado para hashing rápido
    "pydantic", # Validação de dados # Operações de grafo
    "networkx",
    "pandas>=2.3.0",
    "typer>=0.16.0",
]

[project.scripts]
hronir = "hronir_encyclopedia.cli:main"

[project.optional-dependencies]
dev = ["pytest", "pre-commit", "ruff", "black"]
viz = ["matplotlib"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"] # Standard lints + isort + pyupgrade
ignore = ["E501"] # Ignore line too long errors

[tool.black]
line-length = 100

[tool.setuptools]
packages = ["hronir_encyclopedia"]

[tool.uv]
package = true

[dependency-groups]
dev = [
    "black>=25.1.0",
    "pre-commit>=4.2.0",
    "pytest>=8.4.1",
    "repomix>=0.2.9",
    "ruff>=0.12.0",
]
